Snapshot: RumbleDB pre-thesis baseline source (tree of 49bb4852a), CI workflows kept at current master