@@ -20,6 +20,7 @@
 
 package org.rumbledb.shell;
 
+import javassist.CannotCompileException;
 import org.apache.commons.io.IOUtils;
 import org.apache.spark.SparkException;
 import org.jline.reader.EndOfFileException;
@@ -31,15 +32,12 @@ import org.jline.reader.impl.DefaultParser;
 import org.jline.terminal.Terminal;
 import org.jline.terminal.TerminalBuilder;
 import org.rumbledb.api.Item;
-import org.rumbledb.cli.ConsoleOutput;
 import org.rumbledb.cli.JsoniqQueryExecutor;
 import org.rumbledb.cli.Main;
 import org.rumbledb.config.RumbleRuntimeConfiguration;
 import org.rumbledb.exceptions.OurBadException;
 import org.rumbledb.exceptions.RumbleException;
 import org.rumbledb.serialization.Serializer;
-import org.rumbledb.serialization.Serializers;
-
 import static org.jline.reader.LineReader.HISTORY_FILE;
 
 import java.io.BufferedReader;
@@ -100,7 +98,7 @@ public class RumbleJLineShell {
         List<Item> results = new ArrayList<>();
         try {
             long count = this.jsoniqQueryExecutor.runInteractive(query, results);
-            Serializer serializer = Serializers.from(this.configuration.getSerializationParameters());
+            Serializer serializer = this.configuration.getSerializer();
             String result = String.join(
                 "\n",
                 results.stream()
@@ -109,13 +107,13 @@ public class RumbleJLineShell {
             );
             String shell = this.configuration.getShellFilter();
             if (shell != null) {
-                Process process = new ProcessBuilder(shell.split("\\s+")).start();
+                Process process = Runtime.getRuntime().exec(shell);
                 BufferedReader stdout = new BufferedReader(new InputStreamReader(process.getInputStream()));
                 Writer stdin = new OutputStreamWriter(process.getOutputStream());
                 stdin.write(result);
                 stdin.flush();
                 stdin.close();
-                StringBuilder sb = new StringBuilder();
+                StringBuffer sb = new StringBuffer();
                 String s = stdout.readLine();
                 while (s != null) {
                     sb.append(s);
@@ -128,7 +126,7 @@ public class RumbleJLineShell {
             }
             output(result);
             if (count != -1) {
-                JsoniqQueryExecutor.issueMaterializationWarning(count, this.configuration.getResultSizeCap());
+                JsoniqQueryExecutor.issueMaterializationWarning(count, configuration.getResultSizeCap());
             }
             long time = System.currentTimeMillis() - startTime;
             if (this.printTime) {
@@ -174,7 +172,7 @@ public class RumbleJLineShell {
                     handleException(sparkExceptionCause, showErrorInfo);
                 } else {
                     if (showErrorInfo) {
-                        ConsoleOutput.stackTrace(ex);
+                        ex.printStackTrace();
                     }
                     handleException(
                         new OurBadException(
@@ -185,78 +183,96 @@ public class RumbleJLineShell {
                     );
                 }
             } else if (ex instanceof RumbleException && !(ex instanceof OurBadException)) {
-                ConsoleOutput.error("⚠️ " + ex.getMessage());
+                System.err.println("⚠️  ️" + ex.getMessage());
                 if (showErrorInfo) {
-                    ConsoleOutput.stackTrace(ex);
+                    ex.printStackTrace();
                 }
             } else if (ex instanceof OutOfMemoryError) {
-                ConsoleOutput.error(
-                    """
-                            ⚠️  Java went out of memory.
-                            If running locally, try adding --driver-memory 10G (or any quantity you need) between spark-submit and the RumbleDB jar in the command line to see if it fixes the problem. If running on a cluster, --executor-memory is the way to go.\
-                            """
+                System.err.println(
+                    "⚠️  Java went out of memory."
+                );
+                System.err.println(
+                    "If running locally, try adding --driver-memory 10G (or any quantity you need) between spark-submit and the RumbleDB jar in the command line to see if it fixes the problem. If running on a cluster, --executor-memory is the way to go."
                 );
                 if (showErrorInfo) {
-                    ConsoleOutput.stackTrace(ex);
+                    ex.printStackTrace();
                 }
             } else if (ex instanceof IllegalArgumentException) {
-                ConsoleOutput.error(
-                    """
-                            ⚠️  There was an IllegalArgumentException. Most of the time, this happens because you are not using Java 8. Spark only works with Java 8.
-                            If you have several versions of java installed, you need to set your JAVA_HOME accordingly.
-                            If you do not have Java 8 installed, we recommend installing AdoptOpenJDK 1.8.
-                            For more debug info, please try again using --show-error-info yes in your command line.\
-                            """
+                System.err.println(
+                    "⚠️  There was an IllegalArgumentException. Most of the time, this happens because you are not using Java 8. Spark only works with Java 8."
+                );
+                System.err.println(
+                    "If you have several versions of java installed, you need to set your JAVA_HOME accordingly."
+                );
+                System.err.println("If you do not have Java 8 installed, we recommend installing AdoptOpenJDK 1.8.");
+                System.err.println(
+                    "For more debug info, please try again using --show-error-info yes in your command line."
                 );
                 if (showErrorInfo) {
-                    ConsoleOutput.stackTrace(ex);
+                    ex.printStackTrace();
+                }
+            } else if (ex instanceof CannotCompileException) {
+                System.err.println("⚠️  There was a CannotCompileException.");
+                System.err.println(
+                    "There is a known issue with this on Docker and on certain versions of OpenJDK due to the JSONiter library."
+                );
+                System.err.println(
+                    "We have a workaround: please try again using --deactivate-jsoniter-streaming yes on your command line. json-doc() will, however, not be available."
+                );
+                System.err.println(
+                    "For more debug info, please try again using --show-error-info yes in your command line."
+                );
+                if (showErrorInfo) {
+                    ex.printStackTrace();
                 }
             } else if (ex instanceof ConnectException) {
-                ConsoleOutput.error(
-                    """
-                            ⚠️  There was a problem with the connection to the cluster.
-                            For more debug info including the exact exception and a stacktrace, please try again using --show-error-info yes in your command line.\
-                            """
+                System.err.println("⚠️  There was a problem with the connection to the cluster.");
+                System.err.println(
+                    "For more debug info including the exact exception and a stacktrace, please try again using --show-error-info yes in your command line."
                 );
                 if (showErrorInfo) {
-                    ConsoleOutput.stackTrace(ex);
+                    ex.printStackTrace();
                 }
             } else if (ex instanceof NullPointerException) {
-                ConsoleOutput.error(
-                    """
-                            Oh my oh my, we are very embarrassed, because there was a null pointer exception. 🙈
-                            We would like to investigate this and make sure to fix it in a subsequent release. We would be very grateful if you could contact us or file an issue on GitHub with your query.
-                            Link: https://github.com/RumbleDB/rumble/issues
-                            For more debug info (e.g., so you can communicate it to us), please try again using --show-error-info yes in your command line.\
-                            """
+                System.err.println(
+                    "Oh my oh my, we are very embarrassed, because there was a null pointer exception. 🙈"
+                );
+                System.err.println(
+                    "We would like to investigate this and make sure to fix it in a subsequent release. We would be very grateful if you could contact us or file an issue on GitHub with your query."
+                );
+                System.err.println("Link: https://github.com/RumbleDB/rumble/issues");
+                System.err.println(
+                    "For more debug info (e.g., so you can communicate it to us), please try again using --show-error-info yes in your command line."
                 );
                 if (showErrorInfo) {
-                    ConsoleOutput.stackTrace(ex);
+                    ex.printStackTrace();
                 }
             } else if (ex instanceof UserInterruptException) {
-                ConsoleOutput.error(
+                System.err.println(
                     "On behalf of the RumbleDB team, I would like to thank you for querying with us and we are looking forward to having you with us again in the near future. Good bye!"
                 );
                 System.exit(0);
             } else {
-                ConsoleOutput.error(
-                    """
-                            We are very embarrassed, because an error has occured that we did not anticipate 🙈: %s
-                            We would like to investigate this and make sure to fix it. We would be very grateful if you could contact us or file an issue on GitHub with your query.
-                            Link: https://github.com/RumbleDB/rumble/issues
-                            For more debug info (e.g., so you can communicate it to us), please try again using --show-error-info yes in your command line.\
-                            """
-                        .formatted(ex.getMessage())
+                System.err.println(
+                    "We are very embarrassed, because an error has occured that we did not anticipate 🙈: "
+                        + ex.getMessage()
+                );
+                System.err.println(
+                    "We would like to investigate this and make sure to fix it. We would be very grateful if you could contact us or file an issue on GitHub with your query."
+                );
+                System.err.println("Link: https://github.com/RumbleDB/rumble/issues");
+                System.err.println(
+                    "For more debug info (e.g., so you can communicate it to us), please try again using --show-error-info yes in your command line."
                 );
                 if (showErrorInfo) {
-                    ConsoleOutput.stackTrace(ex);
+                    ex.printStackTrace();
                 }
             }
         }
     }
 
     public void output(String message) {
-        ConsoleOutput.error(ANSIColor.YELLOW + message + ANSIColor.RESET);
+        System.err.println(ANSIColor.YELLOW + message + ANSIColor.RESET);
     }
 
     private String getPrompt() {
